--- a/Client/app/src/main/res/layout/activity_register.xml
+++ b/Client/app/src/main/res/layout/activity_register.xml
@@ -134,28 +134,24 @@
             <CheckBox
                 android:id="@+id/checkboxTerms"
                 android:layout_width="wrap_content"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="D'accordo con"
                 android:textColor="@color/black"
-                android:textSize="@dimen/label_dimen"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/linkTerms"
                 app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
             <TextView
                 android:id="@+id/linkTerms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:text="@string/termini_condizioni"
                 android:textAlignment="center"
-                android:textColor="@color/red"
+                android:textColor="@color/black"
                 android:textSize="@dimen/label_dimen"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/checkboxTerms"
-                app:layout_constraintStart_toEndOf="@+id/checkboxTerms"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.6"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/checkboxTerms" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
